Fix spacing on home page

--- a/assets/styles/brendanmurty.css
+++ b/assets/styles/brendanmurty.css
@@ -73,7 +73,6 @@ section#about em{color:#000;font-style:normal}
 section#about p, section#about h2{margin:0;font-weight:400;font-size:30px;line-height:35px}
 section#content{clear:both;width:100%;float:left;background:#f5f5f5;color:#222}
 article{padding:2% 20%;width:60%;margin:0;float:left}
-.type_home article{padding-top:5%;padding-bottom:5%}
 
 /* Custom link underlines */
 
@@ -97,7 +96,6 @@ header h2 a {
 /* Header */
 
 header, footer{padding:1% 20%;width:60%;margin:0;clear:both;float:left}
-.type_home header{padding:4% 6%;width:88%}
 header .profile{display:block;height:206px;width:206px;margin:0 auto}
 header .profile img, .name_resume article h4 img, .name_resume article img{width:200px;height:200px;border-radius:200px}
 header h2{text-align:center;color:#555;margin:25px 0 5px}
